--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -24,7 +24,7 @@
 	<meta NAME="keywords" CONTENT="آستان مقدس، حضرت فاطمه، حضرت فاطمه معصومه، حضرت معصومه، معصومه، پورتال، قرآن و حدیث، کریمه اهل بیت، قم، مرکز قرآن و حدیث، آموزش قرآن، قرآن">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="static/img/favicon.png">
 
 	{%block head%}
 	
